--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -1,7 +1,20 @@
 \section{Examples}
 \label{sec:examples}
 
-Lots of fancy examples that make people go "Oooooh!"
+
+\subsection{Inductive types}
+\label{sec:inductive-types}
+
+
+\subsection{Finite sets}
+\label{sec:finite-sets}
+
+
+\subsection{Axiom of choice}
+\label{sec:axiom-choice}
+
+Axiom of choice, intensional axiom of choice.
+
 
 \subsection{Modulus of Continuity}
 \label{sec:we-show-modulus-of-continuity-example}
