--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -137,15 +137,15 @@ by other means; the output can then be trusted to the extent that the obligation
 
 		\noalign{\textbf{Theory Elements}}
 		\ite ::=
-		     & \iDefinition{\ix}{\ie}&\mbox{Name for a term}\\
-		   | & \iDefinition{\iS}{\is}&\mbox{Name for a set}\\
-		   | & \iDefinition{\iP}{\ip}&\mbox{Name for a proposition/predicate}\\
-		   | & \iDefinition{\iTH}{\ith}&\mbox{Name for a theory}\\
-		   | & \iParameter{\ix}{\is}&\mbox{Require an element in the given set}\\
-		   | & \iParameter{\iS}{\ik}&\mbox{Require a set of the given kind}\\
-		   | & \iParameter{\iP}{\ipt}&\mbox{Require a proposition/predicate of the given sort}\\
-		   | & \iParameter{\iM}{\ith}&\mbox{Require a model of the given theory}\\
-		   | & \iAxiom{\iP}{\ip}&\mbox{Axiom that must hold}\\[5pt]
+		     & \iDefinition{\ix}{\ie}.&\mbox{Name for a term}\\
+		   | & \iDefinition{\iS}{\is}.&\mbox{Name for a set}\\
+		   | & \iDefinition{\iP}{\ip}.&\mbox{Name for a proposition/predicate}\\
+		   | & \iDefinition{\iTH}{\ith}.&\mbox{Name for a theory}\\
+		   | & \iParameter{\ix}{\is}.&\mbox{Require an element in the given set}\\
+		   | & \iParameter{\iS}{\ik}.&\mbox{Require a set of the given kind}\\
+		   | & \iParameter{\iP}{\ipt}.&\mbox{Require a proposition/predicate of the given sort}\\
+		   | & \iParameter{\iM}{\ith}.&\mbox{Require a model of the given theory}\\
+		   | & \iAxiom{\iP}{\ip}.&\mbox{Axiom that must hold}\\[5pt]
 
   		\noalign{\textbf{Theory}}
 		\ith ::= 
