--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -296,3 +296,12 @@ KEY="Peyton Jones"}
                   Programming Languages (POPL '90)},
    YEAR=1990,
    PAGES="341--354"}
+
+@Book{Troelstra:van-Dalen:88:1,
+  author = 	 {A.S. Troelstra and D. van Dalen},
+  title = 	 {Constructivism in Mathematics, An Introduction, Vol. 1},
+  publisher = 	 {North-Holland},
+  year = 	 {1988},
+  number = 	 {121},
+  series = 	 {Studies in Logic and the Foundations of Mathematics}
+}
