--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -1,19 +1,31 @@
 \section{Examples}
 \label{sec:examples}
 
+In this section we look at serveral examples which demonstrate various
+points of RZ. Unfortunately, serious examples from computable
+mathematics take too much space\footnote{Simply because even to
+  describe real numbers, the most basic structure in analysis, it
+  takes several operations and a dozen axioms or so.} and will have to
+be presented separately.
 
-\subsection{Inductive types}
-\label{sec:inductive-types}
+\subsection{Decidable sets}
+\label{sec:decidable-sets}
+
 
 
 \subsection{Finite sets}
 \label{sec:finite-sets}
 
 
+\subsection{Inductive types}
+\label{sec:inductive-types}
+
+
+
 \subsection{Axiom of choice}
 \label{sec:axiom-choice}
 
-Axiom of choice, intensional axiom of choice.
+Axiom of choice, intensional axiom of choice, presentation axiom.
 
 
 \subsection{Modulus of Continuity}
