--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -11,7 +11,15 @@ be presented separately.
 \subsection{Decidable sets}
 \label{sec:decidable-sets}
 
-
+A set $S$ is said to be decidable when, for all $x, y \in S$, $x = y$
+or $\lnot (x = y)$. Classically, all sets are decidable. In RZ a
+decidable set is described as
+%
+\VerbatimInput{decidable1.thy}
+%
+which results in the following output;
+%
+\VerbatimInput{decidable1.mli}
 
 \subsection{Finite sets}
 \label{sec:finite-sets}
