--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -17,7 +17,7 @@ decidable set is described as
 %
 \VerbatimInput{decidable1.thy}
 %
-which results in the following output;
+The interesting part of the output is
 %
 \VerbatimInput{decidable1.mli}
 
