--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -219,7 +219,6 @@
 \newcommand{\oiff}[2]{#1 \Leftrightarrow #2} % iff
 \newcommand{\ototal}[2]{#1{:}\support{#2}} % support membership
 \newcommand{\oper}[3]{#2\,{\approx_{#1}}\,#3} % per
-\newcommand{\orz}[2]{#1\,{\Vdash}\,#2} % realizer
 \newcommand{\oequal}[2]{#1{=}#2} % observational equality
 \newcommand{\oforall}[3]{\forall #1{:}#2.\,#3}
 \newcommand{\oforallt}[3]{\forall #1{:}\support{#2}.\,#3}
@@ -231,7 +230,7 @@
 \newcommand{\oM}{M} % module name
 %%% Proposition kinds
 \newcommand{\opt}{\Pi}
-\newcommand{\oProp}{\mathsf{Prop}}
+\newcommand{\oProp}{\mathsf{bool}}
 %%% Module type elements
 \newcommand{\ote}{\theta}
 \newcommand{\ovalspec}[2]{\mathsf{val}\,#1:#2}
