--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -130,7 +130,15 @@ a function~$f$, and a finite set $u = \set{a_1, \ldots, a_n}$.
 \subsection{Inductive types}
 \label{sec:inductive-types}
 
+We show how general inductive types can be expressed in RZ with
+dependent sets. They are trivially implemented.
 
+\begin{figure}
+  \centering
+  \VerbatimInput{wtype.thy}
+  \caption{General inductive types}
+  \label{fig:wtype}
+\end{figure}
 
 \subsection{Axiom of choice}
 \label{sec:axiom-choice}
