--- a/doc/cie/specifications.tex
+++ b/doc/cie/specifications.tex
@@ -15,7 +15,7 @@ declared types and values.
 %
 \begin{figure}
   \centering
-  \VerbatimInput{group.ml}
+  \sourcefile{group.ml}
   \caption{The module type $\mathtt{Ab}$ and module
     $\mathtt{Z7}$.}
   \label{fig:module-example}
