--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -18,7 +18,7 @@ a named axiom that must hold. (i.e., \textsf{Axiom} specifications).
 More complex theories can be parameterized by models (e.g., a theory
 of real numbers can be written in terms of one unspecified but
 arbitrary model of the natural numbers); in
-figure~\ref{fig:kuratowski} \texttt{K} is a theory parameterized by a
+Figure~\ref{fig:kuratowski}, \texttt{K} is a theory parameterized by a
 model choosing an implementation of a single set. For any such model
 $\im$, then, $\mathtt{K}(\im)$ is a theory describing a model of
 finite sets whose elements are in the set $\iselect{\im}{\mathtt{a}}$.
@@ -30,11 +30,11 @@ theory. In contrast, a parameterized theory permits completely
 unrelated implementations for $\mathtt{K}(\im_1)$ and
 $\mathtt{K(\im_2)}$.
 
-As shown in in Figure~\ref{fig:typicalinput}, propositions and predicates
-appearing in theories may use full first-order constructive logic, not just the
-negative fragment. The grammar for logical inputs is shown in
-Figure~\ref{fig:input}. Most of this should be familiar, including the use of
-lambda abstraction are to define predicates.
+Propositions and predicates appearing in theories may use full
+first-order constructive logic, not just the negative fragment. The
+grammar for logical inputs is shown in Figure~\ref{fig:input}. Most of
+this should be familiar, including the use of lambda abstraction are
+to define predicates.
 
 The language of sets is rich, going well beyond the type systems of typical
 programming languages. In addition to any base sets postulated in a theory, one
